{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 95,
  "lineage": "dbb0c7a9-24cb-53a3-5efb-97e9ca57a0f2",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lbapi",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lbrouter",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbapi",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbrouter_01",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lbrouter_02",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "example",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "infra",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "node",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_interface_application_security_group_association",
      "name": "infra",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_interface_application_security_group_association",
      "name": "master",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_interface_application_security_group_association",
      "name": "node",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "infra",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "master",
      "each": "list",
      "provider": "provider.azurerm"
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "infraNsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA",
            "location": "westeurope",
            "name": "NSGORIGINPOC0616INFRA",
            "resource_group_name": "RSGORIGINPOC0616",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "masterNsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER",
            "location": "westeurope",
            "name": "NSGORIGINPOC0616MASTER",
            "resource_group_name": "RSGORIGINPOC0616",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nodeNsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616NODE",
            "location": "westeurope",
            "name": "NSGORIGINPOC0616NODE",
            "resource_group_name": "RSGORIGINPOC0616",
            "security_rule": [],
            "tags": {}
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "MasterNsgETCD",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift ETCD service ports",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "2379",
              "2380"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-etcd",
            "name": "master-etcd",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 525,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "2379",
              "2380"
            ]
          },
          "dependencies": [
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "MasterNsgSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift SSH from the bastions",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-ssh",
            "name": "master-ssh",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "10.244.253.111",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NodeDenyAll",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616NODE/securityRules/DenyAll",
            "name": "DenyAll",
            "network_security_group_name": "NSGORIGINPOC0616NODE",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.node.azurerm_network_security_group.nodeNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraDenyAll",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/DenyAll",
            "name": "DenyAll",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraNsgKubelet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift kubelet",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/infra-node-kubelet",
            "name": "infra-node-kubelet",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 575,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraNsgPorts",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift ElasticSearch",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "9200",
              "9300"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/infra-ports",
            "name": "infra-ports",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 550,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraNsgRouter",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift router",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/infra-router-ports",
            "name": "infra-router-ports",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 525,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraNsgRouter-2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift router ports",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/infra-router-ports-2",
            "name": "infra-router-ports-2",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 625,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraNsgSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift SSH from the bastions",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/infra-ssh",
            "name": "infra-ssh",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 500,
            "protocol": "*",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "10.244.253.111",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "infraNsgSdn",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift Sdn",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "4789",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616INFRA/securityRules/infra-node-sdn",
            "name": "infra-node-sdn",
            "network_security_group_name": "NSGORIGINPOC0616INFRA",
            "priority": 600,
            "protocol": "Udp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.infra.azurerm_network_security_group.infraNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterDenyAll",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/DenyAll",
            "name": "DenyAll",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterNsgApi",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift API port",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-api",
            "name": "master-api",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 550,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "443",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterNsgApiLb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift API port",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-api-lb",
            "name": "master-api-lb",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 575,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "443",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterNsgKubelet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift kubelet",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-node-kubelet",
            "name": "master-node-kubelet",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 650,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "10250",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterNsgOcpTcp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift TCP DNS and fluentd",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "8053",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-ocp-tcp",
            "name": "master-ocp-tcp",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 600,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "8053",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterNsgOcpUdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift UDP DNS and fluentd",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "8053",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-ocp-udp",
            "name": "master-ocp-udp",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 625,
            "protocol": "Udp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "8053",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "masterNsgSdn",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift sdn",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "4789",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616MASTER/securityRules/master-node-sdn",
            "name": "master-node-sdn",
            "network_security_group_name": "NSGORIGINPOC0616MASTER",
            "priority": 675,
            "protocol": "Udp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "4789",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.master.azurerm_network_security_group.masterNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodeNsgKubelet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift kubelet",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616NODE/securityRules/node-node-kubelet",
            "name": "node-node-kubelet",
            "network_security_group_name": "NSGORIGINPOC0616NODE",
            "priority": 575,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.node.azurerm_network_security_group.nodeNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodeNsgSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift SSH from the bastions",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616NODE/securityRules/node-ssh",
            "name": "node-ssh",
            "network_security_group_name": "NSGORIGINPOC0616NODE",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "10.244.253.111",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.node.azurerm_network_security_group.nodeNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodeNsgSdn",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift Sdn",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "4789",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616NODE/securityRules/node-sdn",
            "name": "node-sdn",
            "network_security_group_name": "NSGORIGINPOC0616NODE",
            "priority": 600,
            "protocol": "Udp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.node.azurerm_network_security_group.nodeNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.node",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nodeNsgSdn2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Openshift Load Balancer health check",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "destination_port_range": "10256",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/networkSecurityGroups/NSGORIGINPOC0616NODE/securityRules/node-node-sdn",
            "name": "node-node-sdn",
            "network_security_group_name": "NSGORIGINPOC0616NODE",
            "priority": 625,
            "protocol": "Tcp",
            "resource_group_name": "RSGORIGINPOC0616",
            "source_address_prefix": "",
            "source_address_prefixes": null,
            "source_application_security_group_ids": [
              "/subscriptions/cac268a6-eb37-4048-a645-34b79e063341/resourceGroups/RSGORIGINPOC0616/providers/Microsoft.Network/applicationSecurityGroups/ASGORIGINPOC0616"
            ],
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "dependencies": [
            "module.asg.azurerm_application_security_group.asg",
            "module.node.azurerm_network_security_group.nodeNsg",
            "module.rg.azurerm_resource_group.cluster"
          ]
        }
      ]
    }
  ]
}